@@ -82,7 +82,7 @@ public final class SchemaKeyspace
     public static final String INDEXES = "indexes";
 
     public static final List<String> ALL =
-        ImmutableList.of(KEYSPACES, TABLES, COLUMNS, TRIGGERS, VIEWS, TYPES, FUNCTIONS, AGGREGATES, INDEXES);
+        ImmutableList.of(KEYSPACES, TABLES, COLUMNS, DROPPED_COLUMNS, TRIGGERS, VIEWS, TYPES, FUNCTIONS, AGGREGATES, INDEXES);
 
     private static final CFMetaData Keyspaces =
         compile(KEYSPACES,
@@ -297,6 +297,11 @@ public final class SchemaKeyspace
 
         for (String table : ALL)
         {
+            // Due to CASSANDRA-11050 we want to exclude DROPPED_COLUMNS for schema digest computation. We can and
+            // should remove that in the next major release (so C* 4.0).
+            if (table.equals(DROPPED_COLUMNS))
+                continue;
+
             ReadCommand cmd = getReadCommandForTableSchema(table);
             try (ReadOrderGroup orderGroup = cmd.startOrderGroup();
                  PartitionIterator schema = cmd.executeInternal(orderGroup))
